# spectral-quantum-playground

./: .gitignore  INDEX.md  QUESTIONS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  ÍNDICE.md
codigo/circuitos/: __init__.py
codigo/matematica/: __init__.py  m00.py
codigo/nucleo/: __init__.py  n00.py  n01.py  n02.py
codigo/utilitarios/: __init__.py
codigo/visualizacao/: __init__.py
digressions/: D-01_born_rule_and_collapse.ipynb  D-05_o_que_e_um_qubit.ipynb
digressoes/: D-00.ipynb  D-00_o_que_e_um_qubit.ipynb  D-01.ipynb  D-02.ipynb  D-02_produtos_tensoriais.ipynb  D-03.ipynb  D-04_block_encoding_minimal.ipynb  D-06.ipynb  D-07.ipynb  D-08.ipynb  D-09.ipynb
matematica/: M-00.ipynb  M-00_vetores_espaco_de_hilbert.ipynb  M-01.ipynb  M-02.ipynb  M-02_aproximacao_polinomial.ipynb  M-02_transformada_de_fourier.ipynb  M-03.ipynb  M-04.ipynb  M-05.ipynb
mathematics/: M-01_spectral_theory_operators.ipynb
notebooks/: 02_phase_kickback.ipynb  04_hamiltonian_simulation_small_cases.ipynb  05_problem_to_operator_translation.ipynb  06_singular_values_vs_eigenvalues.ipynb  07_qsp_qsvt_entry_point.ipynb
nucleo/: C-00_computar_com_qubit.ipynb  C-00_porque_qubit.ipynb  C-02_unitarios_espectro_dinamica.ipynb  C-07_valores_singulares_vs_autovalores.ipynb  N-00.ipynb  N-01.ipynb  N-02.ipynb  N-03.ipynb  N-04.ipynb
recursos/: componentes_html.md
referencias/: papers.md
revisando/: D-R03.ipynb
src/linear_algebra/: __init__.py
